# synthSignal

./: CMakeLists.txt  Event.hpp  Interpolation.cpp  Interpolation.hpp  InterpolationTest.cpp  README.md  SagSwellInterruption.cpp  SagSwellInterruption.hpp  Signal.cpp  Signal.hpp  SignalTest.cpp  SineWaveform.cpp  SineWaveform.hpp  SynthSignalTest.cpp  WhiteNoise.cpp  WhiteNoise.hpp
Rscripts/: CheckWaveformIsGenerated.R  GenerateTestsOutputs.R
